Fixed audio support on IPhone

--- a/ui/src/components/CarouselContainer.css
+++ b/ui/src/components/CarouselContainer.css
@@ -10,6 +10,8 @@
     display: flex;
     flex-direction: row;
     align-items: baseline;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .carousel-container::-webkit-scrollbar {
