--- a/ui/src/components/ObjectViewerComponent.css
+++ b/ui/src/components/ObjectViewerComponent.css
@@ -27,6 +27,10 @@
     object-fit: cover;
 }
 
+.object-viewer-wrapper audio {
+    display: none !important;
+}
+
 .object-viewer-wrapper .controls-bar {
     display: flex;
     flex-direction: row;
